--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <nav mat-tab-nav-bar backgroundColor="">
+  <!-- <a routerLink="/user/bob" routerLinkActive="active-link">Bob</a> -->
   <a mat-tab-link *ngFor="let link of navLinks"
-     (click)="activeLink = link"
-     [active]="activeLink == link"
-     [routerLink]="[ '/'+link ]"> {{link}} </a>
+     routerLinkActive #rla="routerLinkActive"
+     [active]="rla.isActive"
+     [routerLink]="[ '/'+link ]">{{link}}</a>
 </nav>
 
 <router-outlet></router-outlet>
